Library/TeamTalk_DLL/TeamTalk.h

    
    typedef WCHAR TTCHAR;
    typedef int TTBOOL;
    typedef char TTCHAR;
    typedef int TTBOOL;
    typedef unsigned short UINT16;
    typedef int INT32;
    typedef long long INT64;
    typedef unsigned int UINT32;
    typedef void VOID;
    typedef struct AudioBlock
    {
        INT32 nStreamID;
        INT32 nSampleRate;
        INT32 nChannels;
        VOID* lpRawAudio;
        INT32 nSamples;
        UINT32 uSampleIndex;
    } AudioBlock;
    typedef enum MediaFileStatus
    {
        MFS_CLOSED          = 0,
        MFS_ERROR           = 1,
        MFS_STARTED         = 2,
        MFS_FINISHED        = 3,
        MFS_ABORTED         = 4,
        MFS_PAUSED          = 5,
        MFS_PLAYING         = 6
    } MediaFileStatus;
    typedef enum AudioFileFormat
    {
        AFF_NONE                 = 0,
        AFF_CHANNELCODEC_FORMAT  = 1,
        AFF_WAVE_FORMAT          = 2,
        AFF_MP3_16KBIT_FORMAT    = 3,
        AFF_MP3_32KBIT_FORMAT    = 4,
        AFF_MP3_64KBIT_FORMAT    = 5,
        AFF_MP3_128KBIT_FORMAT   = 6,
        AFF_MP3_256KBIT_FORMAT   = 7,
    } AudioFileFormat;
    typedef struct AudioFormat
    {
        AudioFileFormat nAudioFmt;
        INT32 nSampleRate;
        INT32 nChannels;
    } AudioFormat;
    typedef struct VideoFormat
    {
        INT32 nWidth;
        INT32 nHeight;
        INT32 nFPS_Numerator; 
        INT32 nFPS_Denominator; 
        FourCC picFourCC; 
    } VideoFormat;
    typedef UINT32 DesktopKeyStates;
    typedef struct DesktopInput
    {
        UINT16 uMousePosX;
        UINT16 uMousePosY;
        UINT32 uKeyCode;
        DesktopKeyStates uKeyState;
    } DesktopInput;
    typedef struct MediaFileInfo
    {
        MediaFileStatus nStatus;
        TTCHAR szFileName[TT_STRLEN];
        AudioFormat audioFmt;
        VideoFormat videoFmt;
        UINT32 uDurationMSec;
        UINT32 uElapsedMSec;
    } MediaFileInfo;
    typedef struct AudioInputProgress
    {
        INT32 nStreamID;
        UINT32 uQueueMSec;
        UINT32 uElapsedMSec;
    } AudioInputProgress;
    typedef enum StreamType
    {
        STREAMTYPE_NONE                     = 0x00000000,
        STREAMTYPE_VOICE                    = 0x00000001,
        STREAMTYPE_VIDEOCAPTURE             = 0x00000002,
        STREAMTYPE_MEDIAFILE_AUDIO          = 0x00000004,
        STREAMTYPE_MEDIAFILE_VIDEO          = 0x00000008,
        STREAMTYPE_DESKTOP                  = 0x00000010,
        STREAMTYPE_DESKTOPINPUT             = 0x00000020,
        STREAMTYPE_MEDIAFILE                = STREAMTYPE_MEDIAFILE_AUDIO |
                                              STREAMTYPE_MEDIAFILE_VIDEO,
        STREAMTYPE_CLASSROOM_ALL            = STREAMTYPE_VOICE |
                                              STREAMTYPE_VIDEOCAPTURE |
                                              STREAMTYPE_DESKTOP |
                                              STREAMTYPE_MEDIAFILE,
    } StreamType;
    typedef UINT32 StreamTypes;
    typedef struct ServerProperties
    {
        TTCHAR szServerName[TT_STRLEN];
        TTCHAR szMOTD[TT_STRLEN];
        TTCHAR szMOTDRaw[TT_STRLEN];
        INT32 nMaxUsers;
        INT32 nMaxLoginAttempts;
        INT32 nMaxLoginsPerIPAddress;
        INT32 nMaxVoiceTxPerSecond;
        INT32 nMaxVideoCaptureTxPerSecond;
        INT32 nMaxMediaFileTxPerSecond;
        INT32 nMaxDesktopTxPerSecond;
        INT32 nMaxTotalTxPerSecond;
        TTBOOL bAutoSave;
        INT32 nTcpPort;
        INT32 nUdpPort;
        INT32 nUserTimeout;
        TTCHAR szServerVersion[TT_STRLEN];
        TTCHAR szServerProtocolVersion[TT_STRLEN];
        INT32 nLoginDelayMSec;
        TTCHAR szAccessToken[TT_STRLEN];
    } ServerProperties;
    typedef struct ServerStatistics
    {
        INT64 nTotalBytesTX;
        INT64 nTotalBytesRX;
        INT64 nVoiceBytesTX;
        INT64 nVoiceBytesRX;
        INT64 nVideoCaptureBytesTX;
        INT64 nVideoCaptureBytesRX;
        INT64 nMediaFileBytesTX;
        INT64 nMediaFileBytesRX;
        INT64 nDesktopBytesTX;
        INT64 nDesktopBytesRX;
        INT32 nUsersServed;
        INT32 nUsersPeak;
        INT64 nFilesTx;
        INT64 nFilesRx;
        INT64 nUptimeMSec;
    } ServerStatistics;
    typedef struct BannedUser
    {
        TTCHAR szIPAddress[TT_STRLEN]; 
        TTCHAR szChannelPath[TT_STRLEN]; 
        TTCHAR szBanTime[TT_STRLEN];
        TTCHAR szNickname[TT_STRLEN];
        TTCHAR szUsername[TT_STRLEN];
        BanTypes uBanTypes;
    } BannedUser;
    typedef struct UserAccount
    {
        TTCHAR szUsername[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        UserTypes uUserType;
        UserRights uUserRights;
        INT32 nUserData;
        TTCHAR szNote[TT_STRLEN];
        TTCHAR szInitChannel[TT_STRLEN];
        INT32 autoOperatorChannels[TT_CHANNELS_OPERATOR_MAX];
        INT32 nAudioCodecBpsLimit;
        AbusePrevention abusePrevent;
    } UserAccount;
    typedef struct User
    {
        INT32 nUserID;
        TTCHAR szUsername[TT_STRLEN];
        INT32 nUserData;
        UserTypes uUserType;
        TTCHAR szIPAddress[TT_STRLEN];
        UINT32 uVersion;
        INT32 nChannelID; 
        Subscriptions uLocalSubscriptions;
        Subscriptions uPeerSubscriptions;
        TTCHAR szNickname[TT_STRLEN];
        INT32 nStatusMode;
        TTCHAR szStatusMsg[TT_STRLEN];
        UserStates uUserState;
        TTCHAR szMediaStorageDir[TT_STRLEN];
        INT32 nVolumeVoice;
        INT32 nVolumeMediaFile;
        INT32 nStoppedDelayVoice;
        INT32 nStoppedDelayMediaFile;
        float soundPositionVoice[3];
        float soundPositionMediaFile[3];
        TTBOOL stereoPlaybackVoice[2];
        TTBOOL stereoPlaybackMediaFile[2];
        INT32 nBufferMSecVoice;
        INT32 nBufferMSecMediaFile;
        TTCHAR szClientName[TT_STRLEN];
    } User;
    typedef struct TextMessage
    {
        TextMsgType nMsgType;
        INT32 nFromUserID;
        TTCHAR szFromUsername[TT_STRLEN];
        INT32 nToUserID;
        INT32 nChannelID;
        TTCHAR szMessage[TT_STRLEN];
    } TextMessage;
    typedef struct Channel
    {
        INT32 nParentID;
        INT32 nChannelID;
        TTCHAR szName[TT_STRLEN];
        TTCHAR szTopic[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        TTBOOL bPassword;
        ChannelTypes uChannelType;
        INT32 nUserData;
        INT64 nDiskQuota;
        TTCHAR szOpPassword[TT_STRLEN];
        INT32 nMaxUsers;
        AudioCodec audiocodec;
        AudioConfig audiocfg;
        INT32 transmitUsers[TT_TRANSMITUSERS_MAX][2];
        INT32 transmitUsersQueue[TT_TRANSMITQUEUE_MAX];
    } Channel;
    typedef enum FileTransferStatus
    {
        FILETRANSFER_CLOSED     = 0,
        FILETRANSFER_ERROR      = 1,
        FILETRANSFER_ACTIVE     = 2,
        FILETRANSFER_FINISHED   = 3
    } FileTransferStatus;
    typedef struct FileTransfer
    {
        FileTransferStatus nStatus;
        INT32 nTransferID;
        INT32 nChannelID;
        TTCHAR szLocalFilePath[TT_STRLEN];
        TTCHAR szRemoteFileName[TT_STRLEN];
        INT64 nFileSize;
        INT64 nTransferred;
        TTBOOL bInbound;
    } FileTransfer;
    typedef struct RemoteFile
    {
        INT32 nChannelID;
        INT32 nFileID;
        TTCHAR szFileName[TT_STRLEN];
        INT64 nFileSize;
        TTCHAR szUsername[TT_STRLEN];
    } RemoteFile;
    typedef struct ClientErrorMsg
    {
        INT32 nErrorNo;
        TTCHAR szErrorMsg[TT_STRLEN];
    } ClientErrorMsg;
    typedef enum ClientEvent
    {
        CLIENTEVENT_NONE = 0,
        CLIENTEVENT_CON_SUCCESS = CLIENTEVENT_NONE + 10,
        CLIENTEVENT_CON_FAILED = CLIENTEVENT_NONE + 20,
        CLIENTEVENT_CON_LOST = CLIENTEVENT_NONE + 30,
        CLIENTEVENT_CON_MAX_PAYLOAD_UPDATED = CLIENTEVENT_NONE + 40,
        CLIENTEVENT_CMD_PROCESSING = CLIENTEVENT_NONE + 200,
        CLIENTEVENT_CMD_ERROR = CLIENTEVENT_NONE + 210,
        CLIENTEVENT_CMD_SUCCESS = CLIENTEVENT_NONE + 220,
        CLIENTEVENT_CMD_MYSELF_LOGGEDIN = CLIENTEVENT_NONE + 230,
        CLIENTEVENT_CMD_MYSELF_LOGGEDOUT = CLIENTEVENT_NONE + 240,
        CLIENTEVENT_CMD_MYSELF_KICKED = CLIENTEVENT_NONE + 250,
        CLIENTEVENT_CMD_USER_LOGGEDIN = CLIENTEVENT_NONE + 260,
        CLIENTEVENT_CMD_USER_LOGGEDOUT = CLIENTEVENT_NONE + 270,
        CLIENTEVENT_CMD_USER_UPDATE = CLIENTEVENT_NONE + 280,
        CLIENTEVENT_CMD_USER_JOINED = CLIENTEVENT_NONE + 290,
        CLIENTEVENT_CMD_USER_LEFT = CLIENTEVENT_NONE + 300,
        CLIENTEVENT_CMD_USER_TEXTMSG = CLIENTEVENT_NONE + 310,
        CLIENTEVENT_CMD_CHANNEL_NEW = CLIENTEVENT_NONE + 320,
        CLIENTEVENT_CMD_CHANNEL_UPDATE = CLIENTEVENT_NONE + 330,
        CLIENTEVENT_CMD_CHANNEL_REMOVE = CLIENTEVENT_NONE + 340,
        CLIENTEVENT_CMD_SERVER_UPDATE = CLIENTEVENT_NONE + 350,
        CLIENTEVENT_CMD_SERVERSTATISTICS = CLIENTEVENT_NONE + 360,
        CLIENTEVENT_CMD_FILE_NEW = CLIENTEVENT_NONE + 370,
        CLIENTEVENT_CMD_FILE_REMOVE = CLIENTEVENT_NONE + 380,
        CLIENTEVENT_CMD_USERACCOUNT = CLIENTEVENT_NONE + 390,
        CLIENTEVENT_CMD_BANNEDUSER  = CLIENTEVENT_NONE + 400,
        CLIENTEVENT_USER_STATECHANGE = CLIENTEVENT_NONE + 500,
        CLIENTEVENT_USER_VIDEOCAPTURE = CLIENTEVENT_NONE + 510,
        CLIENTEVENT_USER_MEDIAFILE_VIDEO = CLIENTEVENT_NONE + 520,
        CLIENTEVENT_USER_DESKTOPWINDOW = CLIENTEVENT_NONE + 530,
        CLIENTEVENT_USER_DESKTOPCURSOR = CLIENTEVENT_NONE + 540,
        CLIENTEVENT_USER_DESKTOPINPUT = CLIENTEVENT_NONE + 550,
        CLIENTEVENT_USER_RECORD_MEDIAFILE = CLIENTEVENT_NONE + 560,
        CLIENTEVENT_USER_AUDIOBLOCK = CLIENTEVENT_NONE + 570,
        CLIENTEVENT_INTERNAL_ERROR = CLIENTEVENT_NONE + 1000,
        CLIENTEVENT_VOICE_ACTIVATION = CLIENTEVENT_NONE + 1010,
        CLIENTEVENT_HOTKEY = CLIENTEVENT_NONE + 1020,
        CLIENTEVENT_HOTKEY_TEST = CLIENTEVENT_NONE + 1030,
        CLIENTEVENT_FILETRANSFER = CLIENTEVENT_NONE + 1040,
        CLIENTEVENT_DESKTOPWINDOW_TRANSFER = CLIENTEVENT_NONE + 1050,
        CLIENTEVENT_STREAM_MEDIAFILE = CLIENTEVENT_NONE + 1060,
         CLIENTEVENT_LOCAL_MEDIAFILE = CLIENTEVENT_NONE + 1070,
        CLIENTEVENT_AUDIOINPUT = CLIENTEVENT_NONE + 1080,
    } ClientEvent;
    typedef enum TTType
    {
        __NONE                    =  0,
        __AUDIOCODEC              =  1,
        __BANNEDUSER              =  2,
        __VIDEOFORMAT             =  3,
        __OPUSCODEC               =  4,
        __CHANNEL                 =  5,
        __CLIENTSTATISTICS        =  6,
        __REMOTEFILE              =  7,
        __FILETRANSFER            =  8,
        __MEDIAFILESTATUS         =  9,
        __SERVERPROPERTIES        = 10,
        __SERVERSTATISTICS        = 11,
        __SOUNDDEVICE             = 12,
        __SPEEXCODEC              = 13,
        __TEXTMESSAGE             = 14,
        __WEBMVP8CODEC            = 15,
        __TTMESSAGE               = 16,
        __USER                    = 17,
        __USERACCOUNT             = 18,
        __USERSTATISTICS          = 19,
        __VIDEOCAPTUREDEVICE      = 20,
        __VIDEOCODEC              = 21,
        __AUDIOCONFIG             = 22,
        __SPEEXVBRCODEC           = 23,
        __VIDEOFRAME              = 24,
        __AUDIOBLOCK              = 25,
        __AUDIOFORMAT             = 26,
        __MEDIAFILEINFO           = 27,
        __CLIENTERRORMSG          = 28,
        __TTBOOL                  = 29,
        __INT32                   = 30,
        __DESKTOPINPUT            = 31,
        __SPEEXDSP                = 32,
        __STREAMTYPE              = 33,
        __AUDIOPREPROCESSORTYPE   = 34,
        __AUDIOPREPROCESSOR       = 35,
        __TTAUDIOPREPROCESSOR     = 36,
        __MEDIAFILEPLAYBACK       = 37,
        __CLIENTKEEPALIVE         = 38,
        __UINT32                  = 39,
        __AUDIOINPUTPROGRESS      = 40
    } TTType;
    typedef struct TTMessage
    {
        ClientEvent nClientEvent;
        INT32 nSource;
        TTType ttType;
        UINT32 uReserved;
        union
        {
            Channel channel;
            ClientErrorMsg clienterrormsg;
            DesktopInput desktopinput;
            FileTransfer filetransfer;
            MediaFileInfo mediafileinfo;
            RemoteFile remotefile;
            ServerProperties serverproperties;
            ServerStatistics serverstatistics;
            TextMessage textmessage;
            User user;
            UserAccount useraccount;
            BannedUser banneduser;
            TTBOOL bActive;
            INT32 nBytesRemain;
            INT32 nStreamID;
            INT32 nPayloadSize;
            StreamType nStreamType;
            AudioInputProgress audioinputprogress;
            char data[1];
        };
    } TTMessage;
    typedef VOID TTInstance;
    TEAMTALKDLL_API TTBOOL TT_SetUserPosition(IN TTInstance* lpTTInstance,
                                              IN INT32 nUserID, 
                                              IN StreamType nStreamType,
                                              IN float x,
                                              IN float y, 
                                              IN float z);
    TEAMTALKDLL_API TTBOOL TT_SetUserStereo(IN TTInstance* lpTTInstance,
                                            IN INT32 nUserID, 
                                            IN StreamType nStreamType,
                                            IN TTBOOL bLeftSpeaker, 
                                            IN TTBOOL bRightSpeaker);
    TEAMTALKDLL_API TTBOOL TT_SetUserMediaStorageDir(IN TTInstance* lpTTInstance,
                                                     IN INT32 nUserID,
                                                     IN const TTCHAR* szFolderPath,
                                                     IN const TTCHAR* szFileNameVars,
                                                     IN AudioFileFormat uAFF);
    TEAMTALKDLL_API TTBOOL TT_SetUserAudioStreamBufferSize(IN TTInstance* lpTTInstance,
                                                           IN INT32 nUserID,
                                                           IN StreamTypes uStreamType,
                                                           IN INT32 nMSec);
    TEAMTALKDLL_API AudioBlock* TT_AcquireUserAudioBlock(IN TTInstance* lpTTInstance,
                                                         IN StreamType nStreamType,
                                                         IN INT32 nUserID);
    TEAMTALKDLL_API TTBOOL TT_ReleaseUserAudioBlock(IN TTInstance* lpTTInstance,
                                                    IN AudioBlock* lpAudioBlock);
    TEAMTALKDLL_API TTBOOL TT_GetFileTransferInfo(IN TTInstance* lpTTInstance,
                                                  IN INT32 nTransferID, 
                                                  OUT FileTransfer* lpFileTransfer);
    TEAMTALKDLL_API TTBOOL TT_CancelFileTransfer(IN TTInstance* lpTTInstance,
                                                 IN INT32 nTransferID);
    TEAMTALKDLL_API void TT_GetErrorMessage(IN INT32 nError, 
                                            OUT TTCHAR szErrorMsg[TT_STRLEN]);
    typedef enum TTKeyTranslate
    {
        TTKEY_NO_TRANSLATE                  = 0,
        TTKEY_WINKEYCODE_TO_TTKEYCODE       = 1,
        TTKEY_TTKEYCODE_TO_WINKEYCODE       = 2,
        TTKEY_MACKEYCODE_TO_TTKEYCODE       = 3,
        TTKEY_TTKEYCODE_TO_MACKEYCODE       = 4
    } TTKeyTranslate;
    TEAMTALKDLL_API INT32 TT_DesktopInput_KeyTranslate(TTKeyTranslate nTranslate,
                                                       IN const DesktopInput* lpDesktopInputs,
                                                       OUT DesktopInput* lpTranslatedDesktopInputs,
                                                       IN INT32 nDesktopInputCount);
    TEAMTALKDLL_API INT32 TT_DesktopInput_Execute(IN const DesktopInput* lpDesktopInputs,
                                                  IN INT32 nDesktopInputCount);
    TEAMTALKDLL_API TTBOOL TT_HotKey_Register(IN TTInstance* lpTTInstance,
                                              IN INT32 nHotKeyID, 
                                              IN const INT32* lpnVKCodes,
                                              IN INT32 nVKCodeCount);
    TEAMTALKDLL_API TTBOOL TT_HotKey_Unregister(IN TTInstance* lpTTInstance,
                                                IN INT32 nHotKeyID);
    TEAMTALKDLL_API INT32 TT_HotKey_IsActive(IN TTInstance* lpTTInstance,
                                             IN INT32 nHotKeyID);
    TEAMTALKDLL_API TTBOOL TT_HotKey_InstallTestHook(IN TTInstance* lpTTInstance,
                                                     IN HWND hWnd, UINT32 uMsg);
    TEAMTALKDLL_API TTBOOL TT_HotKey_RemoveTestHook(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_HotKey_GetKeyString(IN TTInstance* lpTTInstance,
                                                  IN INT32 nVKCode,
                                                  OUT TTCHAR szKeyName[TT_STRLEN]);
    TEAMTALKDLL_API INT32 TT_DBG_SIZEOF(IN TTType nType);
    TEAMTALKDLL_API VOID* TT_DBG_GETDATAPTR(IN TTMessage* pMsg);
    TEAMTALKDLL_API TTBOOL TT_DBG_SetSoundInputTone(IN TTInstance* lpTTInstance,
                                                    IN StreamTypes uStreamTypes,
                                                    IN INT32 nFrequency);
    TEAMTALKDLL_API TTBOOL TT_DBG_WriteAudioFileTone(IN const MediaFileInfo* lpMediaFileInfo,
                                                     IN INT32 nFrequency);